ExpenseManager/force-app/main/default/objects/Expense_Line__c/Expense_Line__c.object-meta.xml
<CustomObject>
    <label>Expense Line</label>
    <pluralLabel>Expense Lines</pluralLabel>
    <nameField>
        <label>Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>EXL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>