ExpenseManager/force-app/main/default/objects/Expense_Line__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <type>Text</type>
    <length>255</length>
</CustomField>