ExpenseManager/force-app/main/default/objects/Expense_Line__c/validationRules/No_Future_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Dates</fullName>
    <active>true</active>
    <description>An expense cannot be dated in the future.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Expense_Date__c)), Expense_Date__c &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>Expense_Date__c</errorDisplayField>
    <errorMessage>Expense date cannot be in the future.</errorMessage>
</ValidationRule>